--- a/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -8,7 +8,7 @@
 
     <ngb-alert *ngIf="userIsUnassigned()" [type]="'info'" [dismissible]="false">
         <span>
-            Welcome {{currentUser.FullName}}. You have successfully logged in to the {{platformLongName()}},
+            Welcome {{currentUser.FullName}}. You have successfully logged in,
             but your account is not yet configured. You will receive an email from the Administrators when your account is
             ready to use. You may <a routerLink="/help">Request Support</a> to contact the Administrators with any questions or
             comments.
