Add grid for flow test report. Update WellForFlowTestReportPageDto's property names to match other dto property name conventions. Update Wells.ListForFlowTestReportPageDtos to filter the wells further based on RequiresWaterLevelInspection and RequiresChemigation, as before I think I was seeing false positives in the grid. Update Wells.ListForFlowTestReportPageDtos to set the last inspection date to something that should be more correct than it was before. Ensured that the FlowTestReport CustomRichText saves properly. Add basic documentation about fresh developer environment setup to build folder (to be iterated on).

--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -192,6 +192,9 @@
                         <a routerLink="/water-level-inspections" class="dropdown-item">
                             Water Level Inspections
                         </a>
+                        <a routerLink="/flow-test-report" class="dropdown-item">
+                            Flow Test Report
+                        </a>
                     </div>
                 </li>
                 <li class="nav-item searchItem" *ngIf="!isUnassigned()">
