Allow admins to sync PRISM data from the UI.

--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -57,6 +57,10 @@
                     <a routerLink="/robust-review-scenario" class="dropdown-item">
                         Robust Review Scenario
                     </a>
+                    <div class="dropdown-divider"></div>
+                    <a routerLink="/prism-monthly-syncs" class="dropdown-item">
+                        PRISM Integration
+                    </a>
                 </div>
             </li>
             <li class="nav-item dropdown" routerLinkActive="active">
